force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_First_Option_Mac_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LPCR_First_Option_Mac_End_Date__c</fullName>
    <description>LPCR_First_Option_Mac_End_Date</description>
    <formula>If(LPCR_First_Option_Mac_Start_Date__c == null || IsBlank(LPCR_First_Option_Mac_Start_Date__c), null, If( SBQQ__EndDate__c &lt;= LPCR_FirstOptionEndDate__c, SBQQ__EndDate__c, LPCR_FirstOptionEndDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LPCR_First_Option_Mac_End_Date</inlineHelpText>
    <label>First Option Mac End Date</label>
    <type>Date</type>
</CustomField>