force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_First_Option_Mac_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LPCR_First_Option_Mac_Start_Date__c</fullName>
    <description>LPCR_First_Option_Mac_Start_Date</description>
    <formula>If(SBQQ__StartDate__c &lt;=  LPCR_FirstOptionEndDate__c, SBQQ__StartDate__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LPCR_First_Option_Mac_Start_Date</inlineHelpText>
    <label>First Option Mac Start Date</label>
    <type>Date</type>
</CustomField>