force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_FirstOptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FirstOptionEndDate__c</fullName>
    <formula>DATE(YEAR( SBQQ__StartDate__c ), 07, 31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First option end date</label>
    <type>Date</type>
</CustomField>