force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_FormuleFrequence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FormuleFrequence__c</fullName>
    <formula>TEXT ( SBQQ__BillingFrequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formule Fréquence de Facturation</label>
    <type>Text</type>
</CustomField>