force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_IdExterne_Opportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Opportunite__c</fullName>
    <label>Id Externe Opportunite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>