force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_IdExterne_ResponsableADV__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_ResponsableADV__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>