force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_IdExterne_SponsorEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_SponsorEntreprise__c</fullName>
    <label>Id Externe Sponsor Entreprise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>