force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Indexation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Indexation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCR_Indexation</label>
    <type>Checkbox</type>
</CustomField>