force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_IndexationConvenue__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IndexationConvenue__c</fullName>
    <label>Indexation Convenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>