force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_InitAutoAvecDateDebut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_InitAutoAvecDateDebut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field used to know if the billing day of the month has to be setted with Order Start Date</inlineHelpText>
    <label>Facturation spécifique</label>
    <type>Checkbox</type>
</CustomField>