force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_LaunchRecalculation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LaunchRecalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LaunchRecalculation</label>
    <type>Checkbox</type>
</CustomField>