force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ligneBerceauPlanFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ligneBerceauPlanFacturation__c</fullName>
    <label>Nombre de ligne &apos;BerceauPlanFacturation&apos;</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.TECH_ProductCode__c</field>
        <operation>equals</operation>
        <value>BerceauPlanFacturation</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>