force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_LigneInferieurePP__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LigneInferieurePP__c</fullName>
    <label>Ligne Inférieure au prix plancher</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.LPCR_InferieurPP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>