force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_LIGNEINFERIEURPRIXPLANCHER__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LIGNEINFERIEURPRIXPLANCHER__c</fullName>
    <label>Ligne Inférieur au prix plancher- DELETE</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_PRIXINFERIEURPLANCHER__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>