force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_LIGNESUPERIEUREPRIXPLANCHER__c.field-meta.xml
<CustomField>
    <fullName>LPCR_LIGNESUPERIEUREPRIXPLANCHER__c</fullName>
    <label>Ligne supérieure au prix plancher- DELET</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_PRIXSUPERIEUREPLANCHER__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>