force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_MasterDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MasterDevis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champs fait référence au devis &apos;agreement quote&apos; associé</description>
    <label>Contrat Cadre</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contrat Référencement</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>