force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Montant_Remise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Montant_Remise__c</fullName>
    <formula>IF( SBQQ__AdditionalDiscountAmount__c + LPCR_MontantIndexation__c &gt; 0 ,SBQQ__AdditionalDiscountAmount__c + LPCR_MontantIndexation__c ,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Remise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>