force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_MontantForfaitAnnuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantForfaitAnnuel__c</fullName>
    <formula>SBQQ__NetAmount__c * LPCR_Creche__r.LPCR_TypeMensualisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant Forfait Annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>