force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_MontantIndexation2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantIndexation2__c</fullName>
    <label>Montant Indexation</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_IndexationCustom__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.LPCR_IndexationCustom__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.LPCR_Clone__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>