force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_MontantIndexation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantIndexation__c</fullName>
    <label>Montant Indexation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>