force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_MontantIndexationContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantIndexationContrat__c</fullName>
    <label>Montant Indexation Contrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>