force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_MotifAnnulationDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MotifAnnulationDevis__c</fullName>
    <label>Motif d&apos;annulation du devis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signature concurrence - Tarif</fullName>
            </value>
            <value>
                <fullName>Signature concurrence - Visite non concluante</fullName>
            </value>
            <value>
                <fullName>Signature concurrence - Détails inconnus</fullName>
            </value>
            <value>
                <fullName>Abandon projet</fullName>
            </value>
            <value>
                <fullName>Report Projet</fullName>
            </value>
            <value>
                <fullName>Pas de disponibilité</fullName>
            </value>
            <value>
                <fullName>Refus conditions particulières</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>