force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NameRecordType__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NameRecordType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>