force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Nombre_de_lignes_sans_PO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Nombre_de_lignes_sans_PO__c</fullName>
    <label>Nombre de lignes sans PO</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.LPCR_NumeroPurchaseOrder__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>