force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NombreAgrmentCrcheSurSection__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreAgrmentCrcheSurSection__c</fullName>
    <formula>CASE(
  LPCR_Section__c,
  &quot;Bébés&quot;,
  LPCR_Creche__r.LPCR_AgrementBebes__c,
  &quot;Moyens&quot;,
  LPCR_Creche__r.LPCR_AgrementMoyens__c,
  &quot;Grands&quot;,
  LPCR_Creche__r.LPCR_AgrementGrands__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Agrément Crèche sur section</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>