force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Nombreberceauxgratuits__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Nombreberceauxgratuits__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Type__c, &apos;Quote&apos;), LPCR_Berceauxgratuitsquote__c , LPCR_BerceauGratuitAmendment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre berceaux gratuits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>