force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NombreFraisDossier__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreFraisDossier__c</fullName>
    <description>Compte le nombre de quote ligne de type frais dossier pour calcul des frais de dossier dans le contrat (Conga)</description>
    <label>Nombre de frais de dossier</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.TECH_ProductCode__c</field>
        <operation>equals</operation>
        <value>Fraisdedossier</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>