force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NombreHeuresMois__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresMois__c</fullName>
    <label>Nombre d&apos;heures par mois</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>