force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NombreJoursCummul__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursCummul__c</fullName>
    <label>Nombre de jours cumulés</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_NombreDeJour__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>