force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NombreLignesDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreLignesDevis__c</fullName>
    <label>Nombre de lignes du devis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>