force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NombreMois__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreMois__c</fullName>
    <formula>IF(AND(DAY(LPCR_DateFin__c)=29,MONTH(LPCR_DateFin__c)=2,MONTH(LPCR_DateDebut__c)=2),(DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)+1)/29,IF(AND(DAY(LPCR_DateFin__c)=29,MONTH(LPCR_DateFin__c)=2),((DAY(LPCR_DateDebut__c)-DAY(LPCR_DateFin__c)-1)*-1)/29,IF(AND(DAY(LPCR_DateFin__c)=28,MONTH(LPCR_DateFin__c)=2),((DAY(LPCR_DateDebut__c)-DAY(LPCR_DateFin__c)-1)*-1)/28,IF(DAY(LPCR_DateDebut__c)=DAY(LPCR_DateFin__c),((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c))+1)/30,IF(AND(DAY(LPCR_DateFin__c)=31,DAY(LPCR_DateDebut__c)=1),((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)))/30,IF(AND(DAY(LPCR_DateFin__c)=31),((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)-1))/30,IF(AND(DAY(LPCR_DateFin__c)=30,DAY(LPCR_DateDebut__c)=1),((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)+1))/30,IF(DAY(LPCR_DateFin__c)=30,((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)+1))/30,IF(AND((DAY(LPCR_DateFin__c)&lt;DAY(LPCR_DateDebut__c)),DAY(LPCR_DateDebut__c)=31),((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c))+2)/30*-1,IF(DAY(LPCR_DateFin__c)&lt;DAY(LPCR_DateDebut__c),((DAY(LPCR_DateFin__c)+1-DAY(LPCR_DateDebut__c)))/30*-1,IF(DAY(LPCR_DateDebut__c)=1,((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)+1))/30,((DAY(LPCR_DateFin__c)-DAY(LPCR_DateDebut__c)+1)/30)))))))))))+((YEAR(LPCR_DateFin__c)-YEAR(LPCR_DateDebut__c)-1)*12)+(12-MONTH(LPCR_DateDebut__c)+MONTH(LPCR_DateFin__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de mois</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>