force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NomsCrecheLibre__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomsCrecheLibre__c</fullName>
    <description>Saisie manuel des noms de crèche choisies</description>
    <label>Noms des crèches</label>
    <type>TextArea</type>
</CustomField>