force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NouveauPlanFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NouveauPlanFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nouveau Plan de Facture</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>