force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Numero_avenant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Numero_avenant__c</fullName>
    <label>Numéro d&apos;avenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>