force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NumeroActeEngagement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroActeEngagement__c</fullName>
    <label>Numéro d&apos;acte d&apos;engagement</label>
    <length>80</length>
    <type>Text</type>
</CustomField>