force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NumeroBonCommande__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroBonCommande__c</fullName>
    <defaultValue>1</defaultValue>
    <description>numéro de bon de commande lié au contrat de référencement</description>
    <inlineHelpText>numéro de bon de commande lié au contrat de référencement</inlineHelpText>
    <label>Numéro de bon de commande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>