force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NumeroContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroContrat__c</fullName>
    <label>Numéro Devis</label>
    <length>80</length>
    <type>Text</type>
</CustomField>