force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NumeroDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroDevis__c</fullName>
    <formula>IF(  RecordType.DeveloperName  = &quot;Reservataire&quot;,  LPCR_RefDevisReservataire__c  ,
IF( RecordType.DeveloperName  = &quot;Referencement&quot;,  LPCR_RefDevisReferencement__c  ,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro Du Devis</label>
    <type>Text</type>
</CustomField>