force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_NumeroDuDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroDuDevis__c</fullName>
    <label>Numéro Du Devis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>