force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Option__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Option__c</fullName>
    <formula>SBQQ__Opportunity2__r.LPCR_Option__c&lt;&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option</label>
    <type>Checkbox</type>
</CustomField>