force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_OwnerManager__c.field-meta.xml
<CustomField>
    <fullName>LPCR_OwnerManager__c</fullName>
    <formula>LPCR_CreePar__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Manager</label>
    <type>Text</type>
</CustomField>