force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_PbBypassVR__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PbBypassVR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to allow th PB to bypass the VR about status change</description>
    <label>PB_BypassVR</label>
    <type>Checkbox</type>
</CustomField>