force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_PGFDossierRollup__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PGFDossierRollup__c</fullName>
    <label>CA Global (Bcx+ FD)</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_PGFDossier__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Quantity__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>