force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_PlaceCommercialisee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlaceCommercialisee__c</fullName>
    <description>date d&apos;entrée &gt; à date du jour, dans le cas d&apos;un contrat signé mais dont la date d&apos;occupation est dans le futur. Utilisé dans pour rapport analyse de remplissage crèche</description>
    <formula>AND(NOT(ISBLANK(LPCR_ContractEntreprise__c)),LPCR_DateDebut__c &gt; TODAY () , LPCR_StatutInscription__c = &apos;Inscrit&apos;)</formula>
    <inlineHelpText>date d&apos;entrée &gt; à date du jour, dans le cas d&apos;un contrat signé mais dont la date d&apos;occupation est dans le futur. Utilisé dans pour rapport analyse de remplissage crèche</inlineHelpText>
    <label>Place commercialisée</label>
    <type>Checkbox</type>
</CustomField>