force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_PlaceCommercialiseeOccupee__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlaceCommercialiseeOccupee__c</fullName>
    <description>date d&apos;entrée &lt;= à date du jour, dans le cas d&apos;un contrat signé. Utilisé dans pour rapport analyse de remplissage crèche</description>
    <formula>AND(NOT(ISBLANK(LPCR_ContractEntreprise__c)), LPCR_DateDebut__c &lt;= TODAY () , LPCR_StatutInscription__c = &apos;Inscrit&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>date d&apos;entrée &lt;= à date du jour, dans le cas d&apos;un contrat signé. Utilisé dans pour rapport analyse de remplissage crèche</inlineHelpText>
    <label>Place commercialisée occupée</label>
    <type>Checkbox</type>
</CustomField>