force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_PlanningEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PlanningEnfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planning Enfant</label>
    <referenceTo>LPCR_Planning__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>