force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RecalculationMACDone__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RecalculationMACDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculation MAC Done?</label>
    <type>Checkbox</type>
</CustomField>