force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RefDevisAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RefDevisAccueil__c</fullName>
    <displayFormat>CFAM{0000}</displayFormat>
    <label>Ref devis Accueil</label>
    <type>AutoNumber</type>
</CustomField>