force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RefDevisReferencement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RefDevisReferencement__c</fullName>
    <displayFormat>CREF{0000}</displayFormat>
    <label>Ref Devis Referencement</label>
    <type>AutoNumber</type>
</CustomField>