force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RefDevisReservataire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RefDevisReservataire__c</fullName>
    <displayFormat>CRES{0000}</displayFormat>
    <label>Ref Devis Réservataire</label>
    <type>AutoNumber</type>
</CustomField>