force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Region__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Region__c</fullName>
    <formula>TEXT(SBQQ__Account__r.LPCR_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Région</label>
    <type>Text</type>
</CustomField>