force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RemiseCustom__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RemiseCustom__c</fullName>
    <label>Remise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>