force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RenouvellementPlanFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RenouvellementPlanFacture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de Facture (Renouvellement)</label>
    <referenceTo>blng__InvoicePlan__c</referenceTo>
    <relationshipLabel>Quotes (Plan de Facture (Renouvellement))</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>