force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RepriseDateProchaineFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RepriseDateProchaineFacturation__c</fullName>
    <label>Data Migration Next Invoice Date</label>
    <type>Date</type>
</CustomField>