force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ResiliationAnticipe__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ResiliationAnticipe__c</fullName>
    <description>Conditionne la condition de résiliation anticipé dans le contrat:
peut mettre fin au contrat ou diminuer le nombre de berceaux réservés, avant le terme du contrat, au 31 décembre et au 31 août de chaque année sous réserve de l’envoi d’une lettre recommandée avec accusé de réception (LRAR) reçue au siège social de LPCR GROUPE au moins 3 mois avant l’échéance.</description>
    <label>Résiliation anticipé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immédiate</fullName>
            </value>
            <value>
                <fullName>1 an ferme</fullName>
            </value>
            <value>
                <fullName>2 ans ferme</fullName>
            </value>
            <value>
                <fullName>3 ans ferme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>